# Project-Euler

./: CMakeLists.txt  temp.cpp
001~100/: 1.cpp
11~20/: 11.cpp  12.cpp  13.cpp  14.cpp  15.cpp  16.py  17.md  18.cpp  19.cpp  20.py  WhichDay.md
1~10/: 1.cpp  10.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp
21~30/: 21.cpp  22.cpp  23.cpp  24.cpp  25.cpp  26.cpp  27.cpp  28.cpp  29.cpp  30.cpp
31~40/: 31.cpp  32.cpp  33.cpp  34.cpp
